<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81D4FA"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/registerLabel"
        android:layout_width="201dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="70dp"
        android:background="#FF8F00"
        android:text="@string/register_for_class"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/subjectInput"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"
        android:background="#E1BEE7"
        android:ems="10"
        android:hint="@string/subject_name"
        android:inputType="textPersonName"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/submitButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="310dp"
        android:background="#39D815"
        android:text="@string/Submit" />
</RelativeLayout>