<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#647CF6"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/letterOutput"
        android:layout_width="132dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="482dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00BCD4"
        android:ems="10"
        android:inputType="textPersonName"
        android:lineSpacingExtra="18sp"
        android:textColor="#FFEB3B"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/letterGradeLabel"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="256dp"
        android:layout_marginLeft="256dp"
        android:layout_marginTop="455dp"
        android:background="#DDC90B"
        android:text="@string/letter_grade"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/avgOutput"
        android:layout_width="88dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="391dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:background="#9C27B0"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFEB3B"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/minOutput"
        android:layout_width="87dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="335dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="#9C27B0"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFEB3B"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/gradeLayout3"
        android:layout_width="186dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="396dp"
        android:background="#8BC34A"
        android:text="@string/avg_grade"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gradeLayout2"
        android:layout_width="186dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="338dp"
        android:background="#8BC34A"
        android:text="Min Grade"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/maxOutput"
        android:layout_width="87dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="274dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:background="#9C27B0"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFEB3B"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/gradeLayout1"
        android:layout_width="186dp"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="279dp"
        android:background="#8BC34A"
        android:text="@string/max_grade"
        android:textColor="#3F51B5"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/subInput3"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:background="#FCE4EC"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#3F51B5"
        android:textStyle="bold|italic"
        tools:ignore="Autofill,LabelFor,RelativeOverlap" />

    <EditText
        android:id="@+id/subInput2"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:background="#FCE4EC"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#3F51B5"
        android:textStyle="bold|italic"
        tools:ignore="Autofill,LabelFor,RelativeOverlap" />

    <TextView
        android:id="@+id/subLayout3"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="211dp"
        android:background="#FFEB3B"
        android:text="@string/subject_3"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subLayout2"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="150dp"
        android:background="#FFEB3B"
        android:text="@string/subject_2"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subLayout1"
        android:layout_width="122dp"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="90dp"
        android:background="#FFD54F"
        android:text="@string/subject_1"
        android:textColor="#3F51B5"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/headingLabel"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:background="#AA00FF"
        android:text="@string/grade_calculator"
        android:textAllCaps="false"
        android:textColor="#E6EE9C"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/subInput1"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:background="#FCE4EC"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#3F51B5"
        android:textStyle="bold|italic"
        tools:ignore="Autofill,LabelFor,RelativeOverlap" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="131dp"
        android:layout_height="89dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="49dp"
        android:background="#E64A19"
        android:text="@string/submit"
        android:textColor="#F3E5F5"
        android:textSize="30sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="27dp"
        android:background="#F57C00"
        android:text="Next" />
</RelativeLayout>